# advent-of-code-2018

./: .clang-format  .gitignore  CMakeLists.txt  Run.ps1  Run.psm1  meson.build
aoc/: meson.build
aoc/include/aoc/: dynamic_buffer.h  read.h  set.h  string.h  utility.h
aoc/src/: dynamic_buffer.c  main.c  read.c  set.c  string.c
day-01/: main.c  meson.build
day-01a/: main.c  meson.build
day-01b/: main.c  meson.build
day-02/: main.c  meson.build
day-02a/: main.c  meson.build
day-02b/: main.c  meson.build
day-03/: main.c  meson.build
day-03a/: main.c  meson.build
day-03b/: main.c  meson.build
day-04/: main.c  meson.build
day-04a/: main.c  meson.build
day-04b/: main.c  meson.build
day-05/: main.c  meson.build
day-06/: main.c  meson.build
day-07/: main.c  meson.build
day-08/: input.txt  main.c
day-09/: main.c
day-10/: main.c
day-11/: main.c
day-12/: input.txt  main.c
day-13/: main.c
day-1a/: main.c  meson.build
day-1b/: main.c  meson.build
